# ollama_api

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: build_workflow.yml  git-cliff.yml  lint.yml  security_audit.yml  semver.yml
examlples/: why_is_the_sky_blue.rs
examples/: examples.md  generate.rs  generate_blocking.rs  stream_paragraphs.rs  stream_words.rs
src/: lib.rs  main.rs
