[package]
name = "rusty_ollama"
version = "0.1.0"
edition = "2021"
github = "lowpolycat1"
authors = ["lowpolycat1"]
description = "A Rust Ollama API"
license_file = "./license.txt"
repository = "https://github.com/lowpolycat1/rusty_ollama"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
reqwest = { version = "0.12.12", features = [] }
# thiserror = { version = "2.0.11" } // not currently used because I'm still using unwrap in a lot of places


[dev-dependencies]
