[package]
name = "rusty_ollama"
version = "0.1.1"
edition = "2021"
authors = ["lowpolycat1"]
description = "A Rust Ollama API"
license = "MIT"
repository = "https://github.com/lowpolycat1/rusty_ollama"
publish = true

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
reqwest = { version = "0.12.12", features = ["stream", "blocking"] }
thiserror = { version = "2.0.11" }
tokio-util = { version = "0.7.13" }
futures = { version = "0.3.31" }


[dev-dependencies]
futures-util = { version = "0.3.31" }


[[example]]
name = "stream_words"
path = "./examples/stream_words.rs"


[[example]]
name = "generate"
path = "./examples/generate.rs"


[[example]]
name = "stream_paragraphs"
path = "./examples/stream_paragraphs.rs"


[[example]]
name = "generate_blocking"
path = "./examples/generate_blocking.rs"
